Add support for sass files

--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Starter Snowpack App</title>
-
-  <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-  <h1>Welcome to Snowpack!</h1>
+  <p>Welcome to Snowpack!</p>
   <script src="./index.js" type="module"></script>
 </body>
 
